# vk_gaussian_splatting

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  benchmark.cfg  benchmark.py  benchmark.txt  benchmark_3dgrt.cfg  benchmark_3dgs.cfg  benchmark_3dgut.cfg  benchmark_compare.cfg  slangdconfig.json
_autogen/: raster.frag.glsl.h  raster.vert.glsl.h
cmake/: FindSlang.cmake
doc/: hybrid_rendering_3d_gaussians.md  lighting_and_shadows.md  overview_of_vk_gaussian_splatting.md  rasterization_of_3d_gaussian_splatting.md  rasterization_of_3dgut.md  ray_tracing_3d_gaussians.md  stochastic_transparency.md
shaders/: cameras.glsl  cameras.h.slang  color.h.slang  common.glsl  deferred_shading.comp.slang  depth_consolidate.frag.slang  depth_consolidate.vert.slang  device_host.h  dist.comp.glsl  dist.comp.slang  dlss_util.h  gs_particle.glsl  image_compare_composite.comp.slang  image_compare_metric.comp.slang  image_compare_shaderio.h  mesh_raster.frag.glsl  mesh_raster.vert.glsl  octahedral_normal.h.slang  particle_as_build.comp.slang  post.comp.glsl  post.comp.slang  quaternions.glsl  quaternions.h.slang  rank.comp.glsl  raster.frag.glsl  raster.mesh.glsl  raster.vert.glsl  raycommon.glsl  raytrace.rahit.glsl  raytrace.rchit.glsl  raytrace.rgen.glsl  raytrace.rint.glsl  raytrace.rmiss.glsl  shaderio.h  threedgrt.h.slang  threedgrt_custom_attributes.h.slang  threedgrt_payload.glsl  threedgrt_payload.h.slang  threedgrt_raytrace.rahit.slang  threedgrt_raytrace.rchit.slang  (+34 more)
src/: acceleration_structures_lb.cpp  acceleration_structures_lb.hpp  asset_manager_vk.cpp  asset_manager_vk.h  camera_set.h  dlss_denoiser.cpp  dlss_denoiser.hpp  dlss_wrapper.cpp  dlss_wrapper.hpp  elem_camera_custom.hpp  gaussian_splatting.cpp  gaussian_splatting.h  gaussian_splatting_ui.cpp  gaussian_splatting_ui.h  grid_helper_vk.cpp  grid_helper_vk.h  image_compare.cpp  image_compare.h  image_compare_ui.cpp  image_compare_ui.h  light_manager_vk.cpp  light_manager_vk.h  light_set_vk.cpp  light_set_vk.h  main.cpp  memory_monitor_vk.cpp  memory_monitor_vk.h  memory_statistics.cpp  memory_statistics.h  mesh_manager_vk.cpp  mesh_manager_vk.h  mesh_set_vk.cpp  mesh_set_vk.h  obj_loader.cpp  obj_loader.h  parameters.cpp  parameters.h  particle_acceleration_structures_gpu.cpp  particle_acceleration_structures_gpu.hpp  ply_async_loader.cpp  (+22 more)
